css/style.css
/* ... */
		input[type="button"]:hover,
		input[type="submit"]:hover,
		input[type="reset"]:hover,
		.button:hover {
			background: rgba(188, 202, 206, 0.15);
			border-color: inherit;
		}

		input[type="button"].special,
		input[type="submit"].special,
		input[type="reset"].special,
		.button.special {
			background: var(--color-first);
			border-color: var(--color-first);
			color: white !important;
		}

			input[type="button"].special:hover,
			input[type="submit"].special:hover,
			input[type="reset"].special:hover,
			.button.special:hover {
				background: var(--color-first) !important;
				border-color: var(--color-first) !important;
			}

		input[type="button"].fit,
		input[type="submit"].fit,
		input[type="reset"].fit,
		.button.fit {
			width: 100%;
		}

		input[type="button"].small,
		input[type="submit"].small,
		input[type="reset"].small,
		.button.small {
			font-size: 0.7em;
			min-width: 14em;
			padding: 0.5em 0;
		}

		.button.extrasmall {
			font-size: 0.5em;
			min-width: 10em;
			padding: 0.2em 0;
			float: right;
		}

/* Wrapper */

	.wrapper {
		margin-bottom: 5em;
		padding: 4em;
	}

		.wrapper.style1 {
			padding: 0;
		}

		.wrapper.style2 {
			background-color: var(--color-first);
			background-image: url("images/ll.svg"), url("images/ll.svg");
			background-position: bottom left, bottom right;
			background-repeat: no-repeat, no-repeat;
			background-size: 25em, 25em;
			color: white;
		}

			.wrapper.style2 .button:hover {
				background: rgba(255, 255, 255, 0.15) !important;
			}

			.wrapper.style2 .button.special {
				background: white;
				border-color: white;
				color: var(--color-first) !important;
			}

				.wrapper.style2 .button.special:hover {
					border-color: inherit !important;
					color: white !important;
				}

		.wrapper.style3 {
			background: white;
			color: inherit;
		}

		.wrapper.style4 {
			background: white;
			color: inherit;
			padding: 4em;
		}

		.wrapper.styleED {
			background-color: var(--color-car-ed);
			background-image: url("images/ll.svg"), url("images/ll.svg");
			background-position: bottom left, bottom right;
			background-repeat: no-repeat, no-repeat;
			background-size: 25em, 25em;
			color: white;
		}

			.wrapper.styleED .button:hover {
				background: rgba(255, 255, 255, 0.15) !important;
			}

			.wrapper.styleED .button.special {
				background: white;
				border-color: white;
				color: var(--color-car-ed) !important;
			}

				.wrapper.styleED .button.special:hover {
					border-color: inherit !important;
					color: white !important;
				}

		.wrapper.styleCD {
			background-color: var(--color-car-cd);
			background-image: url("images/ll.svg"), url("images/ll.svg");
			background-position: bottom left, bottom right;
			background-repeat: no-repeat, no-repeat;
			background-size: 25em, 25em;
			color: white;
		}

			.wrapper.styleCD .button:hover {
				background: rgba(255, 255, 255, 0.15) !important;
			}

			.wrapper.styleCD .button.special {
				background: white;
				border-color: white;
				color: var(--color-car-cd) !important;
			}

				.wrapper.styleCD .button.special:hover {
					border-color: inherit !important;
					color: white !important;
				}

/* Header */
	@-moz-keyframes reveal-header { 0% { top: -5em; } 100% { top: 0; } }
	@-webkit-keyframes reveal-header { 0% { top: -5em; } 100% { top: 0; } }
	@-o-keyframes reveal-header { 0% { top: -5em; } 100% { top: 0; } }
	@-ms-keyframes reveal-header { 0% { top: -5em; } 100% { top: 0; } }
	@keyframes reveal-header { 0% { top: -5em; } 100% { top: 0; } }

	#header.styleED {
		color: var(--color-car-ed-dark);
	}

	#header.styleCD {
		color: var(--color-car-cd-dark);
	}

	#header {
		background: var(--color-light-background);
		box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.075);
		cursor: default;
		font-size: 0.8em;
		left: 0;
		padding: 1.75em;
		position: fixed;
		top: 0;
		width: 100%;
		z-index: 10000;
	}
		#header nav {
			letter-spacing: 0.075em;
			position: absolute;
			right: 1.5em;
			text-transform: uppercase;
			font-weight: bold;
			top: 0.75em;
		}

			#header nav ul li {
				display: inline-block;
				margin-left: 1.5em;
			}

				#header nav ul li > ul {
					display: none;
				}

				#header nav ul li a {
					border: solid 1px transparent;
					color: inherit;
					display: inline-block;
					line-height: 1em;
					padding: 0.6em 0.75em;
					text-decoration: none;
				}

				#header nav ul li input[type="button"],
				#header nav ul li input[type="submit"],
				#header nav ul li input[type="reset"],
				#header nav ul li .button {
					font-size: 1em;
					min-width: 0;
					width: auto;
				}

				#header nav ul li.submenu > a:before {
					-moz-osx-font-smoothing: grayscale;
					-webkit-font-smoothing: antialiased;
					font-family: FontAwesome;
					font-style: normal;
					font-weight: normal;
					text-transform: none !important;
				}

				#header nav ul li.submenu > a:before {
					content: '\f107';
					margin-right: 0.65em;
				}

				#header nav ul li.active > a, #header nav ul li:hover > a {
					-moz-transition: all 0.2s ease-in-out;
					-webkit-transition: all 0.2s ease-in-out;
					-o-transition: all 0.2s ease-in-out;
					-ms-transition: all 0.2s ease-in-out;
					transition: all 0.2s ease-in-out;
					background: rgba(188, 202, 206, 0.15);
				}

				#header nav .cc-active {
					font-weight: 900;
				}

		#header.reveal {
			-moz-animation: reveal-header 0.5s;
			-webkit-animation: reveal-header 0.5s;
			-o-animation: reveal-header 0.5s;
			-ms-animation: reveal-header 0.5s;
			animation: reveal-header 0.5s;
		}

		#header.alt {
			-moz-animation: none;
			-webkit-animation: none;
			-o-animation: none;
			-ms-animation: none;
			animation: none;
            background: transparent;
            box-shadow: none;
			color: white;
			padding: 2em 2.5em;
			position: absolute;
		}

			#header.alt nav {
				right: 2.5em;
				top: 1.75em;
			}
/* ... */

